--- a/the-modernist Html css js web view/index.html
+++ b/the-modernist Html css js web view/index.html
@@ -184,7 +184,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="latest_post_item latest_post_item_middle">
+                        <div class="latest_post_item ">
                             <a href="">
                                 <img src="img/290x190.png" alt="Latest Work">
                                 <div class="latest_post_caption">
@@ -210,7 +210,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="latest_post_item latest_post_item_middle">
+                        <div class="latest_post_item ">
                             <a href="">
                                 <img src="img/290x190.png" alt="Latest Work">
                                 <div class="latest_post_caption">
